--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ html{
 	text-align: center;
 	font-variant:small-caps;
 }
+.dropdown-item:hover{
+	background-color: #267871;
+	color: #fff;
+}
 header{
 	height: 100vh;
 	background-size: cover;
@@ -37,7 +41,7 @@ header{
 .maint1{
 	color:#000;
 	font-size: 6rem;
-	letter-spacing: 1.7rem;
+	letter-spacing: .3rem;
 	font-weight: 700;
 	animation-name: uptodown;
 	animation-duration: 1s;
@@ -61,6 +65,7 @@ header{
 	border-style: none;
 	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.4);
 	text-transform: uppercase;
+	outline: none;
 	
 }
 
@@ -70,9 +75,11 @@ header{
 	background-color: #232526;
 	color: white;
 	cursor: pointer;
+	outline: none;
 }
 .btn-joinus:active{
 	transform: translateY(-.1rem);
+	outline: none;
 }
 
 
@@ -150,6 +157,11 @@ header{
     	clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 	}
 }
+@media all and (max-height:450px){
+	.about-section{
+    	clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+	}
+}
 
 .members{
 	text-align: center;
@@ -214,6 +226,26 @@ header{
   text-shadow: 0px 8px 15px rgba(0, 0, 0, 0.4);
   cursor: pointer;
 }
+.project-link-container{
+	padding-top: 6rem;
+	padding-left: 2rem;
+	text-decoration: none;
+}
+.projects-link{
+	font-size: 2rem;
+	color:#136a8a;
+	border:.2rem solid #136a8a ;
+	transition: ease-out 0.7s;
+	box-shadow: inset 0 0 0 0 #136a8a;
+	text-transform: uppercase;
+	padding: .5rem;
+}
+.projects-link:hover{
+	color: #fff;
+	text-decoration: none;
+	border:.2rem solid #fff;
+	box-shadow: inset 400px 0 0 0 #136a8a;
+}
 
 /*Footer*/
 
@@ -238,7 +270,7 @@ footer{
 	color: #fff;
 	text-decoration: none;
 	border:.2rem solid #232526 ;
-	box-shadow: inset 400px 0 0 0 #136a8a;
+	box-shadow: inset 400px 0 0 0 #267871;
 }
 ::selection {
     background: #267871;
