--- a/style.css
+++ b/style.css
@@ -280,8 +280,33 @@ footer{
 .social-network .fa{
 	color: white;
     display: inline-block;
-    padding: 0 2rem 5rem 2rem;
-    font-size: 4rem;
+    padding: 0 1rem 1rem 1rem;
+    font-size: 3rem;
 }
-
-
+hr{
+    display: block;
+    unicode-bidi: isolate;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    overflow: hidden;
+    border-style: inset;
+    border-width: 1px;
+}
+footer hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    width: 50%;
+    border-top: 2px solid hsla(0,0%,100%,.1);
+}
+#mailid {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-size: 1.2rem;
+    color: #fff;
+}
